# libpurple-plugin-leaguedecline

./: CMakeLists.txt  README.md  leaguedeny.c  strings.c  strings.h
